--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "calendar_bot_project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@line/bot-sdk": "^10.5.0",
-    "express": "^5.2.1"
+    "express": "^4.18.2"
   }
 }
